# arbor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  action.yml  agent-card.json  docker-compose.yml
.github/: CONTRIBUTING.md  FUNDING.yml  payments.yml
.github/workflows/: arbor-action-smoke.yml  arbor-pr-bot.yml  benchmarks.yml  contributors.yml  flutter.yml  ghcr.yml  mcp-integration-validate.yml  mcp-release-adoption.yml  npm-publish.yml  release.yml  rust.yml  set-topics.yml  vscode-marketplace.yml
arborv2/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
arborv2/notes/: goals.md  habits.md  ideas.md  product.md
arborv2/src/: App.svelte  app.css
arborv2/src-tauri/: Cargo.toml  tauri.conf.json
arborv2/src-tauri/capabilities/: default.json
arborv2/src-tauri/src/: commands.rs  lattice.rs  main.rs  models.rs
arborv2/src/lib/: api.ts  types.ts
crates/: Cargo.toml
crates/arbor-cli/: Cargo.toml  README.md
crates/arbor-core/: Cargo.toml
crates/arbor-graph/: Cargo.toml
crates/arbor-gui/: Cargo.toml  README.md
crates/arbor-gui/src/: app.rs  main.rs
crates/arbor-mcp/: Cargo.toml  README.md
crates/arbor-mcp/src/: apps.rs  git.rs  http.rs  lib.rs  protocol.rs  tasks.rs
crates/arbor-server/: Cargo.toml
crates/arbor-watcher/: Cargo.toml
docs/: 1.9log.md  BENCHMARKS.md  INSTALL.md  LAUNCH_PLAN.md  MCP_INTEGRATION.md  PROTOCOL.md  QUICKSTART.md  RELEASE_NOTES_v1.6.1.1.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.5.0.md  RELEASING.md  ROADMAP.md  ROADMAP_v2.4.0.md
docs/assets/: CLAUDE-example.md
extensions/arbor-vscode/: package-lock.json  package.json
packaging/homebrew/: arbor.rb
packaging/npm/: install.js  package.json
packaging/scoop/: arbor.json
scripts/: commit-v240-history.ps1  install.ps1  install.sh  setup-mcp.ps1  setup-mcp.sh  update_contributors.ps1
scripts/ci/: install-linux-deps.sh
templates/mcp/: README.md  claude-code.project.mcp.json  claude-desktop.user.config.json  cursor.project.mcp.json  vscode.project.mcp.json
visualizer/: README.md
visualizer/test/: widget_test.dart
visualizer/windows/: CMakeLists.txt
(+46 files in other folders)
